 - Add functions for a lid open/close. Holding key (default "Backspace" in Windows port) while game is freeze/non freeze. [CrazyMax]
 - Added a bunch of crazy templates to the cpu and mmu for minor speed boosts [zeromus]
 - Add secure area decryption from ndstool [zeromus]
 - change backupmem autodetection to catch more cases of unusual usage patterns [zeromus]
 Graphics:
 - Added gfx3d module which emulates the whole GE as part of the core emu. [zeromus]
 - Moved the windows/cocoa OGLRender to the emu core and replace ogl_collector. 
   Now every platform shares the same 3d code. [zeromus]
 - Reorganize 3d code to defer rendering to after 3d vblank. eliminates tearing, and texturing artifacts. [zeromus]
 - Add optional fragment shading pipeline for more precision [luigi__]
 - Many tweaks and improvements to 3d precision [zeromus, CrazyMax, luigi__]
 - Rewrite VRAM mapping control and rendering [CrazyMax, luigi__]
 - Improvements to 2d/3d compositing aiming at better NSMB rendering; still imperfect [zeromus] 
 - Fix in capture display (many games with both 3D screen not blinking now) [CrazyMax]
 - Fix in master brightness (this is fix games with black screens) [CrazyMax] 
 - Added SSE2 version for some matrix routines [CrazyMax]
 - Make matrix 4x4 multiply routines use W-coordinate. [zeromus]
 - Add many matrix and vector functions to matrix.cpp [zeromus]
 - Added transparency and fixed material alpha support and alpha testing on the 3D core [shash]
 - Changed how depth initial values are calculated (fixes SM64DS skybox) [shash] 
 - Some fixes in 3D core OGL (fixed textures) [CrazyMax]
 - Added texture caching (speedup 3D core) [CrazyMax]
 - Render shadow volumes [zeromus, luigi__]
 - Toon shading system [luigi__]
 - carry w=1 from vertex() through pipeline (this will be necessary for software 3d rendering) [zeromus]
 - Fix clear depth (ex. Castlevania now doesnt flip) [lugi__]